logs/log-aggregator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appJar'...
Listing './lib/python3.5/site-packages/appJar/examples'...
Listing './lib/python3.5/site-packages/appJar/lib'...
Listing './lib/python3.5/site-packages/appJar/lib/tkdnd2.8'...
Listing './lib/python3.5/site-packages/appJar/lib/tkdnd2.8/tcl_files'...
Listing './lib/python3.5/site-packages/appJar/lib/tkdnd2.8/tcl_libs'...
Listing './lib/python3.5/site-packages/appJar/resources'...
Listing './lib/python3.5/site-packages/appJar/resources/icons'...
Listing './lib/python3.5/site-packages/appJar-0.82.1.egg-info'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/log_aggregator'...
Compiling './lib/python3.5/site-packages/log_aggregator/conf_loader.py'...
***   File "./lib/python3.5/site-packages/log_aggregator/conf_loader.py", line 71
    print colors.bcolors.FAIL + "The following file(s) won't be tared as they DO NOT exist under the curent file system:" + colors.bcolors.ENDC
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/log_aggregator/gui_test.py'...
***   File "./lib/python3.5/site-packages/log_aggregator/gui_test.py", line 43
    print self.app.getMeter("progress")
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/log_aggregator/tar_manager.py'...
***   File "./lib/python3.5/site-packages/log_aggregator/tar_manager.py", line 24
    print real_path
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/log_aggregator-0.22.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.43.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_buffer.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real_fancy.py'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/smtp.py'...
Compiling './share/doc/pycurl/examples/ssh_keyfunction.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
Listing './share/python-wheels'...
